--- a/archives/toutiao-search/2024-03-14.md
+++ b/archives/toutiao-search/2024-03-14.md
@@ -1,58 +1,74 @@
 # 2024-03-14
 
-共 260 条
+共 274 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Mar 14 2024 19:00:44 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Mar 14 2024 20:00:40 GMT+0800 (China Standard Time) -->
 1. [燕郊爆炸系输送中的管道泄漏导致](https://so.toutiao.com/search?keyword=燕郊爆炸系输送中的管道泄漏导致)
-1. [美众议院通过TikTok法案 外交部回应](https://so.toutiao.com/search?keyword=美众议院通过TikTok法案+外交部回应)
+1. [律师解读杀害同学3男孩是否负刑责](https://so.toutiao.com/search?keyword=律师解读杀害同学3男孩是否负刑责)
 1. [粮食主产区春耕春管进展顺利](https://so.toutiao.com/search?keyword=粮食主产区春耕春管进展顺利)
-1. [学生食堂内做不雅动作？校方通报](https://so.toutiao.com/search?keyword=学生食堂内做不雅动作？校方通报)
-1. [菲总统称不能接受中方“十段线”](https://so.toutiao.com/search?keyword=菲总统称不能接受中方“十段线”)
 1. [河北省委：支持保障记者正当采访](https://so.toutiao.com/search?keyword=河北省委：支持保障记者正当采访)
+1. [美众议院通过TikTok法案 外交部回应](https://so.toutiao.com/search?keyword=美众议院通过TikTok法案+外交部回应)
+1. [专家解读初中男孩遭3名同学杀害](https://so.toutiao.com/search?keyword=专家解读初中男孩遭3名同学杀害)
+1. [学生食堂内做不雅动作？校方通报](https://so.toutiao.com/search?keyword=学生食堂内做不雅动作？校方通报)
+1. [北京卫健委：新冠病毒正处于流行期](https://so.toutiao.com/search?keyword=北京卫健委：新冠病毒正处于流行期)
+1. [青海因洪水致数十人死亡系谣言](https://so.toutiao.com/search?keyword=青海因洪水致数十人死亡系谣言)
 1. [深圳原副市长黄敏被查](https://so.toutiao.com/search?keyword=深圳原副市长黄敏被查)
-1. [2岁孙女被鸡飞踹 爷爷炖鸡解气](https://so.toutiao.com/search?keyword=2岁孙女被鸡飞踹+爷爷炖鸡解气)
-1. [有人跨越2700公里去吃天水麻辣烫](https://so.toutiao.com/search?keyword=有人跨越2700公里去吃天水麻辣烫)
-1. [普京：俄已对核战争做好准备](https://so.toutiao.com/search?keyword=普京：俄已对核战争做好准备)
-1. [教育局回应被害初中生曾长期遭霸凌](https://so.toutiao.com/search?keyword=教育局回应被害初中生曾长期遭霸凌)
+1. [SpaceX星舰今晚第三次试飞](https://so.toutiao.com/search?keyword=SpaceX星舰今晚第三次试飞)
 1. [男子开车带妻子体检遇爆炸不幸身亡](https://so.toutiao.com/search?keyword=男子开车带妻子体检遇爆炸不幸身亡)
-1. [胡塞武装打烂中国承租货船？无凭据](https://so.toutiao.com/search?keyword=胡塞武装打烂中国承租货船？无凭据)
-1. [TikTok会在美国被禁吗](https://so.toutiao.com/search?keyword=TikTok会在美国被禁吗)
+1. [中国买家取消美国小麦订单有何影响](https://so.toutiao.com/search?keyword=中国买家取消美国小麦订单有何影响)
+1. [普京：俄已对核战争做好准备](https://so.toutiao.com/search?keyword=普京：俄已对核战争做好准备)
 1. [央媒：燕郊前年爆炸事故仍未认定责任](https://so.toutiao.com/search?keyword=央媒：燕郊前年爆炸事故仍未认定责任)
-1. [电动车“4不得”新政策有何影响](https://so.toutiao.com/search?keyword=电动车“4不得”新政策有何影响)
-1. [东北“开化”有多可怕](https://so.toutiao.com/search?keyword=东北“开化”有多可怕)
-1. [商务部回应美众议院通过TikTok法案](https://so.toutiao.com/search?keyword=商务部回应美众议院通过TikTok法案)
-1. [日本一猫咪化工池沾满致癌物后逃离](https://so.toutiao.com/search?keyword=日本一猫咪化工池沾满致癌物后逃离)
-1. [黑色外卖勺不能用？博主买1100把检测](https://so.toutiao.com/search?keyword=黑色外卖勺不能用？博主买1100把检测)
-1. [独生女举报62岁父亲代孕生儿子](https://so.toutiao.com/search?keyword=独生女举报62岁父亲代孕生儿子)
-1. [甘肃天水旅游热度上涨186%](https://so.toutiao.com/search?keyword=甘肃天水旅游热度上涨186%)
-1. [20多万现金埋地里受损银行救回12万](https://so.toutiao.com/search?keyword=20多万现金埋地里受损银行救回12万)
-1. [台湾人更愿和平统一还是祖国统一](https://so.toutiao.com/search?keyword=台湾人更愿和平统一还是祖国统一)
-1. [甘肃天水麻辣烫如何接住这泼天富贵](https://so.toutiao.com/search?keyword=甘肃天水麻辣烫如何接住这泼天富贵)
-1. [陈晓东任外交部副部长](https://so.toutiao.com/search?keyword=陈晓东任外交部副部长)
-1. [男教师校内猝死 事发时宿舍门虚掩](https://so.toutiao.com/search?keyword=男教师校内猝死+事发时宿舍门虚掩)
+1. [2岁孙女被鸡飞踹 爷爷炖鸡解气](https://so.toutiao.com/search?keyword=2岁孙女被鸡飞踹+爷爷炖鸡解气)
 1. [田朴珺送73岁王石定制款国产车](https://so.toutiao.com/search?keyword=田朴珺送73岁王石定制款国产车)
+1. [菲总统称不能接受中方“十段线”](https://so.toutiao.com/search?keyword=菲总统称不能接受中方“十段线”)
+1. [电动车“4不得”新政策有何影响](https://so.toutiao.com/search?keyword=电动车“4不得”新政策有何影响)
+1. [TikTok会在美国被禁吗](https://so.toutiao.com/search?keyword=TikTok会在美国被禁吗)
 1. [张雪峰谈大学越来越像工厂说法](https://so.toutiao.com/search?keyword=张雪峰谈大学越来越像工厂说法)
+1. [日本一猫咪化工池沾满致癌物后逃离](https://so.toutiao.com/search?keyword=日本一猫咪化工池沾满致癌物后逃离)
+1. [济南6天开了4家甘肃麻辣烫](https://so.toutiao.com/search?keyword=济南6天开了4家甘肃麻辣烫)
+1. [学校为学生安全考虑放学封路半小时](https://so.toutiao.com/search?keyword=学校为学生安全考虑放学封路半小时)
+1. [20多万现金埋地里受损银行救回12万](https://so.toutiao.com/search?keyword=20多万现金埋地里受损银行救回12万)
+1. [有人跨越2700公里去吃天水麻辣烫](https://so.toutiao.com/search?keyword=有人跨越2700公里去吃天水麻辣烫)
+1. [独生女举报62岁父亲代孕生儿子](https://so.toutiao.com/search?keyword=独生女举报62岁父亲代孕生儿子)
+1. [何超琼和大家一起唱《奢香夫人》](https://so.toutiao.com/search?keyword=何超琼和大家一起唱《奢香夫人》)
+1. [商务部回应美众议院通过TikTok法案](https://so.toutiao.com/search?keyword=商务部回应美众议院通过TikTok法案)
+1. [男子评估二手车发现后备箱底板有洞](https://so.toutiao.com/search?keyword=男子评估二手车发现后备箱底板有洞)
+1. [甘肃天水旅游热度上涨186%](https://so.toutiao.com/search?keyword=甘肃天水旅游热度上涨186%)
+1. [陈晓东任外交部副部长](https://so.toutiao.com/search?keyword=陈晓东任外交部副部长)
+1. [90后落马女干部刘芳秀出镜忏悔](https://so.toutiao.com/search?keyword=90后落马女干部刘芳秀出镜忏悔)
+1. [新车顶配价格高于问界M5？小米回应](https://so.toutiao.com/search?keyword=新车顶配价格高于问界M5？小米回应)
+1. [黑色外卖勺不能用？博主买1100把检测](https://so.toutiao.com/search?keyword=黑色外卖勺不能用？博主买1100把检测)
+1. [A股三大指数集体收跌](https://so.toutiao.com/search?keyword=A股三大指数集体收跌)
 1. [管碧玲道歉 岛内舆论不买账](https://so.toutiao.com/search?keyword=管碧玲道歉+岛内舆论不买账)
+1. [东北“开化”有多可怕](https://so.toutiao.com/search?keyword=东北“开化”有多可怕)
+1. [俄媒：俄海上自杀式无人机准备参战](https://so.toutiao.com/search?keyword=俄媒：俄海上自杀式无人机准备参战)
+1. [货车“见缝插针”引事故](https://so.toutiao.com/search?keyword=货车“见缝插针”引事故)
+1. [四川阆中一小区有5座坟墓 社区回应](https://so.toutiao.com/search?keyword=四川阆中一小区有5座坟墓+社区回应)
+1. [大陆渔船翻覆搜救现场视频公布](https://so.toutiao.com/search?keyword=大陆渔船翻覆搜救现场视频公布)
+1. [迪士尼回应游客排队买包险发生踩踏](https://so.toutiao.com/search?keyword=迪士尼回应游客排队买包险发生踩踏)
+1. [燕郊爆燃事故造成7死27伤](https://so.toutiao.com/search?keyword=燕郊爆燃事故造成7死27伤)
+1. [甘肃天水麻辣烫如何接住这泼天富贵](https://so.toutiao.com/search?keyword=甘肃天水麻辣烫如何接住这泼天富贵)
+1. [公职人员回应被举报出轨他人妻子](https://so.toutiao.com/search?keyword=公职人员回应被举报出轨他人妻子)
+1. [燕郊爆燃逃生者称又捡一条命](https://so.toutiao.com/search?keyword=燕郊爆燃逃生者称又捡一条命)
 1. [情人不愿生育 男子找代孕生俩娃](https://so.toutiao.com/search?keyword=情人不愿生育+男子找代孕生俩娃)
+1. [哈尔滨赴大连海葬活动启动](https://so.toutiao.com/search?keyword=哈尔滨赴大连海葬活动启动)
+1. [台湾人更愿和平统一还是祖国统一](https://so.toutiao.com/search?keyword=台湾人更愿和平统一还是祖国统一)
+1. [教育局回应被害初中生曾长期遭霸凌](https://so.toutiao.com/search?keyword=教育局回应被害初中生曾长期遭霸凌)
+1. [胡塞武装打烂中国承租货船？无凭据](https://so.toutiao.com/search?keyword=胡塞武装打烂中国承租货船？无凭据)
+1. [男教师校内猝死 事发时宿舍门虚掩](https://so.toutiao.com/search?keyword=男教师校内猝死+事发时宿舍门虚掩)
 1. [燕郊爆炸亲历者：感觉像原子弹爆炸](https://so.toutiao.com/search?keyword=燕郊爆炸亲历者：感觉像原子弹爆炸)
 1. [新免签六国第一批旅客抵达重庆](https://so.toutiao.com/search?keyword=新免签六国第一批旅客抵达重庆)
 1. [男子走向水果摊掌掴店员](https://so.toutiao.com/search?keyword=男子走向水果摊掌掴店员)
-1. [燕郊爆燃逃生者称又捡一条命](https://so.toutiao.com/search?keyword=燕郊爆燃逃生者称又捡一条命)
 1. [浓眉：我在尽量匹配小萨的对抗强度](https://so.toutiao.com/search?keyword=浓眉：我在尽量匹配小萨的对抗强度)
-1. [学校为学生安全考虑放学封路半小时](https://so.toutiao.com/search?keyword=学校为学生安全考虑放学封路半小时)
 1. [央视采访燕郊爆炸遇阻 记协连发三问](https://so.toutiao.com/search?keyword=央视采访燕郊爆炸遇阻+记协连发三问)
 1. [东莞围堵摊贩协管被警方带走调查](https://so.toutiao.com/search?keyword=东莞围堵摊贩协管被警方带走调查)
-1. [大陆渔船翻覆搜救现场视频公布](https://so.toutiao.com/search?keyword=大陆渔船翻覆搜救现场视频公布)
-1. [燕郊爆燃事故造成7死27伤](https://so.toutiao.com/search?keyword=燕郊爆燃事故造成7死27伤)
 1. [姥姥倒车撞树外孙哭喊追车](https://so.toutiao.com/search?keyword=姥姥倒车撞树外孙哭喊追车)
 1. [美发的坑根本踩不完](https://so.toutiao.com/search?keyword=美发的坑根本踩不完)
 1. [两市成交额连续4个交易日破万亿元](https://so.toutiao.com/search?keyword=两市成交额连续4个交易日破万亿元)
 1. [DRO-A/B卫星发射异常](https://so.toutiao.com/search?keyword=DRO-A/B卫星发射异常)
 1. [加价雷克萨斯4S涉事客服经理被开除](https://so.toutiao.com/search?keyword=加价雷克萨斯4S涉事客服经理被开除)
-1. [新车顶配价格高于问界M5？小米回应](https://so.toutiao.com/search?keyword=新车顶配价格高于问界M5？小米回应)
 1. [媒体人谈采访受阻：封锁是最大负面](https://so.toutiao.com/search?keyword=媒体人谈采访受阻：封锁是最大负面)
-1. [迪士尼回应游客排队买包险发生踩踏](https://so.toutiao.com/search?keyword=迪士尼回应游客排队买包险发生踩踏)
 1. [TikTok：不会改变数据保护策略](https://so.toutiao.com/search?keyword=TikTok：不会改变数据保护策略)
 1. [燕郊居民摆7束鲜花祭奠7名遇难者](https://so.toutiao.com/search?keyword=燕郊居民摆7束鲜花祭奠7名遇难者)
 1. [白宫回应普京涉核武器言论](https://so.toutiao.com/search?keyword=白宫回应普京涉核武器言论)
@@ -81,7 +97,6 @@
 1. [曝孙怡滕光正同居](https://so.toutiao.com/search?keyword=曝孙怡滕光正同居)
 1. [媒体人为遭阻拦记者发声](https://so.toutiao.com/search?keyword=媒体人为遭阻拦记者发声)
 1. [天水文旅局回应麻辣烫火出圈](https://so.toutiao.com/search?keyword=天水文旅局回应麻辣烫火出圈)
-1. [哈尔滨赴大连海葬活动启动](https://so.toutiao.com/search?keyword=哈尔滨赴大连海葬活动启动)
 1. [甘肃天水开通2条麻辣烫公交专线](https://so.toutiao.com/search?keyword=甘肃天水开通2条麻辣烫公交专线)
 1. [燕郊爆燃招待所老板娘遗体被找到](https://so.toutiao.com/search?keyword=燕郊爆燃招待所老板娘遗体被找到)
 1. [沪指日线三连阴](https://so.toutiao.com/search?keyword=沪指日线三连阴)
@@ -90,7 +105,6 @@
 1. [这些智慧农业科技感十足](https://so.toutiao.com/search?keyword=这些智慧农业科技感十足)
 1. [去年双十二在京东下订单至今没到货](https://so.toutiao.com/search?keyword=去年双十二在京东下订单至今没到货)
 1. [管碧玲就渔船事件道歉](https://so.toutiao.com/search?keyword=管碧玲就渔船事件道歉)
-1. [90后落马女干部刘芳秀出镜忏悔](https://so.toutiao.com/search?keyword=90后落马女干部刘芳秀出镜忏悔)
 1. [女孩唱戏头勒13层水纱头饰疼到掉泪](https://so.toutiao.com/search?keyword=女孩唱戏头勒13层水纱头饰疼到掉泪)
 1. [用消费品以旧换新撬动万亿市场](https://so.toutiao.com/search?keyword=用消费品以旧换新撬动万亿市场)
 1. [韩国成人博览会遭抗议](https://so.toutiao.com/search?keyword=韩国成人博览会遭抗议)
